# claw-son-four-point-five

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.test.yml
docs/: README.md  mkdocs.yml
education/: README.md
education/platform/backend/src/: main.py
education/platform/frontend/: next.config.js  package.json
education/platform/frontend/src/pages/: index.tsx
implementation/: README.md
implementation/src/: main.py
implementation/src/core/base/: __init__.py
implementation/src/models/: neuro_symbolic_classifier.py
implementation/src/utils/: experiment_tracking.py
research/: README.md
research/analysis/: README.md
research/limitations/: README.md  technical.md
research/papers/: README.md  bibliography.bib
tests/integration/: test_api.py  test_education.py
tests/performance/: load-test.js
