[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-son-four-point-five"
version = "0.1.0"
description = "Comprehensive AI research, implementation, and educational platform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Gods-Type", email = "contact@example.com"}
]
maintainers = [
    {name = "Gods-Type", email = "contact@example.com"}
]
keywords = ["ai", "machine-learning", "research", "education", "implementation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
requires-python = ">=3.9"
dependencies = [
    # Core dependencies
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    
    # ML/DL frameworks
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "tensorflow>=2.6.0",
    
    # Data processing
    "scipy>=1.7.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.2.0",
    
    # Web/API
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    
    # Experiment tracking
    "mlflow>=1.20.0",
    "wandb>=0.12.0",
    
    # Utilities
    "click>=8.0.0",
    "pyyaml>=5.4.0",
    "python-dotenv>=0.19.0",
    "tqdm>=4.62.0",
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "pytest-mock>=3.6.0",
    "pytest-asyncio>=0.15.0",
    
    # Code quality
    "black>=21.0.0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    
    # Documentation
    "sphinx>=4.1.0",
    "sphinx-rtd-theme>=0.5.0",
    "mkdocs>=1.2.0",
    "mkdocs-material>=7.2.0",
    
    # Development tools
    "ipython>=7.27.0",
    "jupyter-console>=6.4.0",
    "notebook>=6.4.0",
    
    # Security
    "bandit>=1.7.0",
    "safety>=1.10.0",
]

education = [
    # Frontend dependencies (managed separately)
    # Backend for education platform
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "psycopg2-binary>=2.9.0",
    "redis>=3.5.0",
    "celery>=5.2.0",
    "python-multipart>=0.0.5",
    "python-jose>=3.3.0",
    "passlib>=1.7.0",
    "bcrypt>=3.2.0",
    "aiofiles>=0.7.0",
]

research = [
    # Research tools
    "zotero>=5.0.0",
    "bibtexparser>=1.4.0",
    "scholarly>=1.5.0",
    "arxiv>=1.4.0",
    "doi>=2.0.0",
    "crossref-commons>=0.0.7",
    "plotly>=5.3.0",
    "bokeh>=2.4.0",
]

[project.scripts]
claw-son = "claw_son.cli:main"

[project.urls]
Homepage = "https://github.com/Gods-Type/claw-son-four-point-five"
Documentation = "https://docs.claw-son-four-point-five.com"
Repository = "https://github.com/Gods-Type/claw-son-four-point-five.git"
"Bug Tracker" = "https://github.com/Gods-Type/claw-son-four-point-five/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw_son*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["claw_son"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "tensorflow.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "mlflow.*",
    "wandb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "implementation/tests",
    "research/analysis/tests",
    "education/tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["implementation/src", "research", "education"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]